--- a/deno.json
+++ b/deno.json
@@ -1,1 +1,10 @@
-{ "fmt": { "semiColons": false, "singleQuote": true } }
+{
+  "fmt": { "semiColons": false, "singleQuote": true },
+  "imports": {
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.2",
+    "@std/http": "jsr:@std/http@^1.0.8",
+    "jose": "https://deno.land/x/jose@v5.9.6/index.ts",
+    "opine": "https://deno.land/x/opine@2.3.4/mod.ts"
+  },
+  "tasks": { "start": "deno run -N mod.ts" }
+}
