--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "fmt": { "semiColons": false, "singleQuote": true },
   "imports": {
+    "@azure/msal-node": "npm:@azure/msal-node@^2.15.0",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.2",
     "@std/http": "jsr:@std/http@^1.0.8",
     "jose": "https://deno.land/x/jose@v5.9.6/index.ts",
